# mkproject22

./: index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  db.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bridge.rs  commands.rs  db.rs  file_bridge.rs  lib.rs  main.rs  watcher.rs
src/components/: AUMTerminal.tsx  AccountDashboard.tsx  AccountSwitcher.tsx  AdComPitch.tsx  AlphaEngine.tsx  BehavioralAnalytics.tsx  Dashboard.tsx  ExecutionDesk.tsx  Journal.tsx  MacroOutlook.tsx  MarketMonitor.tsx  MissedTrades.tsx  Modal.tsx  QuantSandbox.tsx  RiskEngine.tsx  ScenarioBuilder.tsx  ScenarioManager.tsx  Settings.tsx  SystemLibrary.tsx  TradeEntry.tsx  TradeJournal.tsx  WeeklyForm.tsx  WeeklyReview.tsx  WeeklyReviewHub.tsx
src/types/: index.ts
